--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Node.js Typescript Archetype",
   "private": true,
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf ./dist ./coverage ./nyc_output",
@@ -65,7 +66,7 @@
     "postcss-preset-env": "^8.3.2",
     "postcss-url": "^10.1.3",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5",
+    "vite": "^4.3.6",
     "wireit": "^0.9.5"
   },
   "dependencies": {
