--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "author": "Ganesha <reekoheek@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.1",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@open-wc/testing": "^3.1.8",
     "@web/dev-server-esbuild": "^0.4.1",
@@ -74,6 +75,7 @@
     "@xlit/form": "^2.0.3",
     "@xlit/router": "^2.0.3",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "lit": "^2.7.4"
   }
 }
