--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf ./dist ./coverage ./nyc_output",
+    "start": "vite preview",
     "dev": "vite",
     "lint": "wireit",
     "lint:eslint": "eslint ./src",
@@ -59,22 +60,23 @@
     "@faker-js/faker": "^8.0.1",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@open-wc/testing": "^3.1.8",
+    "@types/mocha": "^10.0.1",
     "@web/dev-server-esbuild": "^0.4.1",
     "@web/test-runner": "^0.16.1",
     "cssnano": "^6.0.1",
     "eslint-config-xinix": "^2.0.1",
     "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^8.3.2",
+    "postcss-preset-env": "^8.4.1",
     "postcss-url": "^10.1.3",
     "typescript": "^5.0.4",
-    "vite": "^4.3.6",
+    "vite": "^4.3.8",
     "wireit": "^0.9.5"
   },
   "dependencies": {
-    "@xlit/di": "^2.0.3",
-    "@xlit/form": "^2.0.3",
-    "@xlit/router": "^2.0.3",
-    "bootstrap": "^5.2.3",
+    "@xlit/di": "^2.2.2",
+    "@xlit/form": "^2.2.2",
+    "@xlit/router": "^2.2.2",
+    "bootstrap": "5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "lit": "^2.7.4"
   }
